// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders badge on loading mode 1`] = `
<div>
  <div
    class="ui grey tiny basic label"
  >
    Invalid
  </div>
</div>
`;

exports[`renders badges with all available state 1`] = `
<div>
  <div
    class="ui orange tiny basic label"
  >
    Pending review
  </div>
</div>
`;

exports[`renders badges with all available state 2`] = `
<div>
  <div
    class="ui teal tiny basic label"
  >
    Approved
  </div>
</div>
`;

exports[`renders badges with all available state 3`] = `
<div>
  <div
    class="ui red tiny basic label"
  >
    Changes needed
  </div>
</div>
`;

exports[`renders badges with all available state 4`] = `
<div>
  <div
    class="ui blue tiny basic label"
  >
    Processed
  </div>
</div>
`;
